pywrapper/src/pyciaaw/ciaaw_saw.h

struct ciaaw_saw_element_t{
    char element[25];
    char symbol[9];
    int z;
    double saw_min;
    double saw_max;
    double saw;
    double saw_u;
    double asaw;
    double asaw_u;
};
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_V;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cr;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Mn;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Fe;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Co;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ni;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cu;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Zn;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ga;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ge;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_As;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Se;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Br;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Kr;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Tc;