src/ciaaw_saw.f90


type(element_t), parameter, public :: V =&
element_t("vanadium", "V", 23, nan, nan, 50.9415d0, 0.0001d0, 50.942d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_V") :: capi_V =&
capi_element_t(&
["v","a","n","a","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["V",c_null_char, " "," "," "," "," "," "," "], &
V%z, &
V%saw_max, V%saw_min, V%saw, V%saw_u, V%asaw, V%asaw_u)

type(element_t), parameter, public :: Cr =&
element_t("chromium", "Cr", 24, nan, nan, 51.9961d0, 0.0006d0, 51.996d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Cr") :: capi_Cr =&
capi_element_t(&
["c","h","r","o","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","r",c_null_char, " "," "," "," "," "," "], &
Cr%z, &
Cr%saw_max, Cr%saw_min, Cr%saw, Cr%saw_u, Cr%asaw, Cr%asaw_u)

type(element_t), parameter, public :: Mn =&
element_t("manganese", "Mn", 25, nan, nan, 54.938043d0, 0.000002d0, 54.938d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Mn") :: capi_Mn =&
capi_element_t(&
["m","a","n","g","a","n","e","s","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","n",c_null_char, " "," "," "," "," "," "], &
Mn%z, &
Mn%saw_max, Mn%saw_min, Mn%saw, Mn%saw_u, Mn%asaw, Mn%asaw_u)

type(element_t), parameter, public :: Fe =&
element_t("iron", "Fe", 26, nan, nan, 55.845d0, 0.002d0, 55.845d0, 0.002d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Fe") :: capi_Fe =&
capi_element_t(&
["i","r","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","e",c_null_char, " "," "," "," "," "," "], &
Fe%z, &
Fe%saw_max, Fe%saw_min, Fe%saw, Fe%saw_u, Fe%asaw, Fe%asaw_u)

type(element_t), parameter, public :: Co =&
element_t("cobalt", "Co", 27, nan, nan, 58.933194d0, 0.000003d0, 58.933d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Co") :: capi_Co =&
capi_element_t(&
["c","o","b","a","l","t",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","o",c_null_char, " "," "," "," "," "," "], &
Co%z, &
Co%saw_max, Co%saw_min, Co%saw, Co%saw_u, Co%asaw, Co%asaw_u)

type(element_t), parameter, public :: Ni =&
element_t("nickel", "Ni", 28, nan, nan, 58.6934d0, 0.0004d0, 58.693d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ni") :: capi_Ni =&
capi_element_t(&
["n","i","c","k","e","l",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","i",c_null_char, " "," "," "," "," "," "], &
Ni%z, &
Ni%saw_max, Ni%saw_min, Ni%saw, Ni%saw_u, Ni%asaw, Ni%asaw_u)

type(element_t), parameter, public :: Cu =&
element_t("copper", "Cu", 29, nan, nan, 63.546d0, 0.003d0, 63.546d0, 0.003d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Cu") :: capi_Cu =&
capi_element_t(&
["c","o","p","p","e","r",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","u",c_null_char, " "," "," "," "," "," "], &
Cu%z, &
Cu%saw_max, Cu%saw_min, Cu%saw, Cu%saw_u, Cu%asaw, Cu%asaw_u)

type(element_t), parameter, public :: Zn =&
element_t("zinc", "Zn", 30, nan, nan, 65.38d0, 0.02d0, 65.38d0, 0.02d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Zn") :: capi_Zn =&
capi_element_t(&
["z","i","n","c",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Z","n",c_null_char, " "," "," "," "," "," "], &
Zn%z, &
Zn%saw_max, Zn%saw_min, Zn%saw, Zn%saw_u, Zn%asaw, Zn%asaw_u)

type(element_t), parameter, public :: Ga =&
element_t("gallium", "Ga", 31, nan, nan, 69.723d0, 0.001d0, 69.723d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ga") :: capi_Ga =&
capi_element_t(&
["g","a","l","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","a",c_null_char, " "," "," "," "," "," "], &
Ga%z, &
Ga%saw_max, Ga%saw_min, Ga%saw, Ga%saw_u, Ga%asaw, Ga%asaw_u)

type(element_t), parameter, public :: Ge =&
element_t("germanium", "Ge", 32, nan, nan, 72.630d0, 0.008d0, 72.630d0, 0.008d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Ge") :: capi_Ge =&
capi_element_t(&
["g","e","r","m","a","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","e",c_null_char, " "," "," "," "," "," "], &
Ge%z, &
Ge%saw_max, Ge%saw_min, Ge%saw, Ge%saw_u, Ge%asaw, Ge%asaw_u)

type(element_t), parameter, public :: As =&
element_t("arsenic", "As", 33, nan, nan, 74.921595d0, 0.000006d0, 74.922d0, 0.001d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_As") :: capi_As =&
capi_element_t(&
["a","r","s","e","n","i","c",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","s",c_null_char, " "," "," "," "," "," "], &
As%z, &
As%saw_max, As%saw_min, As%saw, As%saw_u, As%asaw, As%asaw_u)

type(element_t), parameter, public :: Se =&
element_t("selenium", "Se", 34, nan, nan, 78.971d0, 0.008d0, 78.971d0, 0.008d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Se") :: capi_Se =&
capi_element_t(&
["s","e","l","e","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","e",c_null_char, " "," "," "," "," "," "], &
Se%z, &
Se%saw_max, Se%saw_min, Se%saw, Se%saw_u, Se%asaw, Se%asaw_u)

type(element_t), parameter, public :: Br =&
element_t("bromine", "Br", 35, 79.901d0, 79.907d0, 79.904d0, 0.002d0, 79.904d0, 0.003d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Br") :: capi_Br =&
capi_element_t(&
["b","r","o","m","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","r",c_null_char, " "," "," "," "," "," "], &
Br%z, &
Br%saw_max, Br%saw_min, Br%saw, Br%saw_u, Br%asaw, Br%asaw_u)

type(element_t), parameter, public :: Kr =&
element_t("krypton", "Kr", 36, nan, nan, 83.798d0, 0.002d0, 83.798d0, 0.002d0)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Kr") :: capi_Kr =&
capi_element_t(&
["k","r","y","p","t","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K","r",c_null_char, " "," "," "," "," "," "], &
Kr%z, &
Kr%saw_max, Kr%saw_min, Kr%saw, Kr%saw_u, Kr%asaw, Kr%asaw_u)

type(element_t), parameter, public :: Tc =&
element_t("technetium", "Tc", 43, nan, nan, nan, nan, nan, nan)
type(capi_element_t), protected, public, bind(C, name="ciaaw_saw_Tc") :: capi_Tc =&
capi_element_t(&
["t","e","c","h","n","e","t","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","c",c_null_char, " "," "," "," "," "," "], &
Tc%z, &
Tc%saw_max, Tc%saw_min, Tc%saw, Tc%saw_u, Tc%asaw, Tc%asaw_u)


end module ciaaw__saw
